--- a/index .html
+++ b/index .html
@@ -20,6 +20,10 @@
         <a href="#complimentPage" class="start-button"></a>
     </header>
     <main>
+        <div class="startOver">
+            <a href="javascript:history.go()" class="startOver"></a>
+        </div>
+        <!-- end of div.startOver -->
         <section id="complimentPage">
             <div class="wrapper">
                 <div class="openingQuestion">
@@ -46,22 +50,22 @@
                     <!-- end of form -->
                 </div>
                 <!-- end of div.openingQuestion -->
+            </div>
+            <!-- end of div.wrapper -->
 
+            <div class="wrapper">
                 <div class="complimentScreen">
                     <div class="randomResult"></div>
-                    <a href="#" class="generate-button"></a>
-                    <!-- <i class="fab fa-twitter"></i>
-                    <a href="https://twitter.com/lindsay_codes?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @lindsay_codes</a> -->
-                    
                 </div>
                 <!-- end of div.complimentScreen -->
+                <div id="twitter">
+                    <a href="https://twitter.com/lindsay_codes?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @lindsay_codes</a>
+                </div>
+                <!-- end of div#twitter -->
             </div>
             <!-- end of div.wrapper -->
         </section>
         <!-- end of #complimentScreen -->
-
-
-
     </main>
 
     <!-- twitter follow -->
