--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
     </main>
 
     <!-- twitter follow -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <!-- typeit -->
-    <script src="https://cdn.jsdelivr.net/npm/typeit@5.9.0/dist/typeit.min.js" />
+    <script src="https://cdn.jsdelivr.net/npm/typeit@5.9.0/dist/typeit.min.js"></script>
     <!-- smooth scroll -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/2.1.2/jquery.smooth-scroll.min.js"></script>
     <!-- jquery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <!-- external script file -->
     <script src="scripts/script.js"></script>
 </body>
